@@ -239,6 +239,7 @@
             border: 1px solid #2c3242;
         }
     </style>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script type="module">
         import { Player } from './player.js';
         import { Mob } from './mob.js';
@@ -296,7 +297,9 @@
                     mob_name: form.mob_name.value,
                     mob_level: form.mob_level.value,
                     // Clone modifiers
-                    clone_modifiers: cloneModifiers
+                    clone_modifiers: cloneModifiers,
+                    // API key
+                    api_key: document.getElementById('api_key').value
                 };
                 localStorage.setItem('stellarOdysseySettings', JSON.stringify(settings));
             }
@@ -333,6 +336,7 @@
                 });
                 cloneModifiers = DEFAULTS.clone_modifiers.map(mod => ({...mod}));
             }
+
             // For selects and n_clones, trigger input event to update UI
             const nClonesInput = document.getElementById('n_clones');
             nClonesInput.addEventListener('input', () => {
@@ -431,21 +435,51 @@
                 btn.addEventListener('click', () => {
                     const targetId = btn.getAttribute('data-target');
                     const input = document.getElementById(targetId);
-                    const min = parseInt(input.getAttribute('min')) || 0;
-                    let val = parseInt(input.value) || 0;
-                    const step = (targetId === 'n_clones') ? 1 : ['precision', 'hull', 'power', 'evasion'].includes(targetId) ? 5 : 10;
+                    const min = parseFloat(input.getAttribute('min')) || 0;
+                    let val = parseFloat(input.value) || 0;
+                    
+                    // Define step values for different fields
+                    let step = 10; // default step
+                    if (['n_clones', 'number_of_drones'].includes(targetId)) {
+                        step = 1;
+                    } else if (['precision', 'hull', 'power', 'evasion'].includes(targetId)) {
+                        step = 5;
+                    } else if (['dodge_percentage', 'rare_drop_increase', 'maneuverability'].includes(targetId)) {
+                        step = 1;
+                    }
+                    
                     val = Math.max(min, val - step);
+                    // Round to 1 decimal place for percentage fields
+                    if (['dodge_percentage', 'rare_drop_increase', 'maneuverability'].includes(targetId)) {
+                        val = Math.round(val * 10) / 10;
+                    }
                     input.value = val;
                     input.dispatchEvent(new Event('input'));
                 });
             });
+            
             document.querySelectorAll('.plus-btn:not([data-clone])').forEach(btn => {
                 btn.addEventListener('click', () => {
                     const targetId = btn.getAttribute('data-target');
                     const input = document.getElementById(targetId);
-                    let val = parseInt(input.value) || 0;
-                    const step = (targetId === 'n_clones') ? 1 : ['precision', 'hull', 'power', 'evasion'].includes(targetId) ? 5 : 10;
-                    val = val + step;
+                    const max = parseFloat(input.getAttribute('max')) || Infinity;
+                    let val = parseFloat(input.value) || 0;
+                    
+                    // Define step values for different fields
+                    let step = 10; // default step
+                    if (['n_clones', 'number_of_drones'].includes(targetId)) {
+                        step = 1;
+                    } else if (['precision', 'hull', 'power', 'evasion'].includes(targetId)) {
+                        step = 5;
+                    } else if (['dodge_percentage', 'rare_drop_increase', 'maneuverability'].includes(targetId)) {
+                        step = 1;
+                    }
+                    
+                    val = Math.min(max, val + step);
+                    // Round to 1 decimal place for percentage fields
+                    if (['dodge_percentage', 'rare_drop_increase', 'maneuverability'].includes(targetId)) {
+                        val = Math.round(val * 10) / 10;
+                    }
                     input.value = val;
                     input.dispatchEvent(new Event('input'));
                 });
@@ -825,7 +859,7 @@
                 <div id="cloneModifiersSection" class="clone-modifiers-section"></div>
             </div>
             <div style="display: flex; flex-direction: column; align-items: flex-start; margin-left: 7.5em;">
-                <div class="battle-block" style="margin-top: 0; margin-left: 5px; min-height: 210px; max-height: 210px;width: 350px; min-width: 350px; max-width: 350px">
+                <div class="battle-block" style="margin-top: 0.0em; margin-left: 5px; min-height: 210px; max-height: 210px;width: 350px; min-width: 350px; max-width: 350px">
                     <div class="block-label">Battle Simulation
                         <span style="color: #4fa3ff; margin-left: 5px; cursor: help;" title="Run a battle simulation with the current configuration. The simulation will execute the specified number of battles (up to 1,000,000) to calculate win probability and resource gains.">ⓘ</span>
                     </div>
@@ -848,7 +882,7 @@
                             <label for="optimizer_n_fights">Number of fights:</label>
                             <input type="number" id="optimizer_n_fights" name="optimizer_n_fights" value="5000" min="1" max="1000000" style="width: 5.5em; background: #36405a; color: #e6eaf3; border: 1px solid #2c3242;">
                         </div>
-                        <div class="form-group" style="align-items: flex-start; justify-content: flex-start; margin-left: -100px; display: flex; flex-direction: row; align-items: center;">
+                        <div class="form-group" style="align-items: flex-start; justify-content: flex-start; margin-left: -130px; display: flex; flex-direction: row; align-items: center;">
                             <button id="optimizerBtn" type="button">Optimize</button>
                             <button id="importOptimizedBtn" type="button" style="display: none; margin-left: 20px;">Import</button>
                         </div>
@@ -869,14 +903,92 @@
                         </div>
                     </div>
                 </div>
+                <div class="optimizer-block" style="margin-top: 1.0em; margin-left: 5px; width: 500px; min-width: 500px; max-width: 500px; min-height: 210px;">
+                    <div class="block-label">Resources Calculator
+                        <span style="color: #4fa3ff; margin-left: 5px; cursor: help;" title="Calculate resource gathering rates and time to reach specific goals based on your current setup.
+• 'Resources' and 'Rare resources' per action refer to what you are currently gathering on your current planet
+• 'Additional dodge' and 'Additional rare resource drop' depend only on Laser and Sensor modifications
+• 'Avg. maneuverability' is the average Maneuverability across all your drones">ⓘ</span>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="resources_per_action">Resources per action:</label>
+                            <div class="input-group">
+                                <button type="button" class="minus-btn" data-target="resources_per_action">-</button>
+                                <input type="number" id="resources_per_action" name="resources_per_action" value="0" min="0" style="width: 5.5em; background: #36405a; color: #e6eaf3; border: 1px solid #2c3242;">
+                                <button type="button" class="plus-btn" data-target="resources_per_action">+</button>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="rare_resources_per_action">Rare res per action:</label>
+                            <div class="input-group">
+                                <button type="button" class="minus-btn" data-target="rare_resources_per_action">-</button>
+                                <input type="number" id="rare_resources_per_action" name="rare_resources_per_action" value="0" min="0" style="width: 5.5em; background: #36405a; color: #e6eaf3; border: 1px solid #2c3242;">
+                                <button type="button" class="plus-btn" data-target="rare_resources_per_action">+</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="number_of_drones">Number of drones:</label>
+                            <div class="input-group">
+                                <button type="button" class="minus-btn" data-target="number_of_drones">-</button>
+                                <input type="number" id="number_of_drones" name="number_of_drones" value="1" min="1" style="width: 5.5em; background: #36405a; color: #e6eaf3; border: 1px solid #2c3242;">
+                                <button type="button" class="plus-btn" data-target="number_of_drones">+</button>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="dodge_percentage">Additional dodge:</label>
+                            <div class="input-group">
+                                <button type="button" class="minus-btn" data-target="dodge_percentage">-</button>
+                                <input type="number" id="dodge_percentage" name="dodge_percentage" value="0" min="0" max="100" step="0.1" style="width: 5.5em; background: #36405a; color: #e6eaf3; border: 1px solid #2c3242;">
+                                <span style="margin: 0 0.2em;">%</span>
+                                <button type="button" class="plus-btn" data-target="dodge_percentage">+</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="rare_drop_increase">Additional rare res drop:</label>
+                            <div class="input-group">
+                                <button type="button" class="minus-btn" data-target="rare_drop_increase">-</button>
+                                <input type="number" id="rare_drop_increase" name="rare_drop_increase" value="0" min="0" max="100" step="0.1" style="width: 5.5em; background: #36405a; color: #e6eaf3; border: 1px solid #2c3242;">
+                                <span style="margin: 0 0.2em;">%</span>
+                                <button type="button" class="plus-btn" data-target="rare_drop_increase">+</button>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="maneuverability">Avg. maneuverability:</label>
+                            <div class="input-group">
+                                <button type="button" class="minus-btn" data-target="maneuverability">-</button>
+                                <input type="number" id="maneuverability" name="maneuverability" value="0" min="0" max="100" step="0.1" style="width: 5.5em; background: #36405a; color: #e6eaf3; border: 1px solid #2c3242;">
+                                <span style="margin: 0 0.2em;">%</span>
+                                <button type="button" class="plus-btn" data-target="maneuverability">+</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group" style="align-items: flex-start; justify-content: flex-start; margin-left: 0;">
+                            <button id="calculateResourcesBtn" type="button">Calculate</button>
+                        </div>
+                    </div>
+                    <div id="resourcesResult" style="display: flex; flex-direction: row; gap: 2em; margin-top: 1em;">
+                        <div style="font-size: 0.98em;">
+                            <div><b>Resources per hour:</b> <span id="resources_per_hour">-</span></div>
+                            <div><b>Rare resources per hour:</b> <span id="rare_resources_per_hour">-</span></div>
+                            <div><b>Hours necessary to gather 32M resources:</b> <span id="hours_to_32m">-</span></div>
+                            <div><b>Hours necessary to gather 800k rare resources:</b> <span id="days_to_800k">-</span></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </form>
     <div id="playerResult"></div>
-    <footer style="margin-top: 12em; font-size: 1em; color: #928e8e; text-align: left;">
+    <footer style="margin-top: 6em; font-size: 1em; color: #928e8e; text-align: left;">
         <span>Proudly made by anfneub</span>
         <span style="margin-left: 2.5em;" id="lastUpdated"></span>
-        <span style="margin-left: 2.5em;">Space Odyssey Version 1.0.9 2025-05-07</span>
+        <span style="margin-left: 2.5em;">Space Odyssey Version 1.0.15 2025-05-13</span>
         <span style="margin-left: 2.5em; cursor: pointer; color: #4fa3ff; text-decoration: underline;" id="changelogLink">Changelog</span>
     </footer>
     <script>
@@ -885,8 +997,8 @@
         if (lastUpdated) {
             const now = new Date();
             const pad = n => n.toString().padStart(2, '0');
-            const dateStr = "2025-05-09";
-            const timeStr = "16:32";
+            const dateStr = "2025-05-15";
+            const timeStr = "20:48";
             lastUpdated.textContent = `Last updated: ${dateStr} ${timeStr}`;
         }
     </script>
@@ -935,5 +1047,6 @@
       if (e.target === this) this.style.display = 'none';
     });
     </script>
+    <script src="script.js"></script>
 </body>
 </html> 
